<resources>
    <string name="app_name">MovieTrailerApp</string>
    <string name="app_title">Trailer World</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="movie_name">Movie Name</string>
    <string name="upcoming_playing_movies">Upcoming  Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="dummy_movie_title">Movie Title</string>
    <string name="dummy_movie_rating">0.0</string>
    <string name="overview">Overview</string>
    <string name="title_activity_video">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="birthday_txt">Birthday</string>
    <string name="gender_txt">Gender</string>
    <string name="pob_txt">Place Of Birth</string>
    <string name="biography_txt">Biography</string>
    <string name="movies_done_txt">Known for</string>
    <string name="tmdb_api_key">84c85237fccfe25218451c4279b3de1a</string>
    <string name="not_found_txt">Not found</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
</resources>