<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movieList.MainActivity"
    android:orientation="vertical"
    android:id="@+id/mainActivityContainer"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/primary"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_twotone_search_24"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center_vertical|start"
            android:onClick="startSearchActivity"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/app_title"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textColor="@color/accent"
            android:textStyle="bold"
            android:id="@+id/title_text"
            />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing_movies"
                android:textSize="20sp"
                android:layout_marginVertical="10dp"
                />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_now_playing"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/now_playing_rv"
                android:orientation="horizontal"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_playing_movies"
                android:textSize="20sp"
                android:layout_marginVertical="10dp"
                />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_upcoming"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/upcoming_rv"
                android:orientation="horizontal"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_movies"
                android:textSize="20sp"
                android:layout_marginVertical="10dp"
                />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_popular"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/popular_rv"
                android:orientation="horizontal"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated_movies"
                android:textSize="20sp"
                android:layout_marginVertical="10dp"
                />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_top_rated"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/top_rated_rv"
                android:orientation="horizontal"
                android:visibility="gone"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>