<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/box_shape"
    android:id="@+id/castBottomSheetFragment"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="10dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_shape"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/aclonica"
                    android:hint="UserName"
                    android:id="@+id/name_cast"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:id="@+id/birthday_layout"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday_txt"
                        android:layout_marginHorizontal="10dp"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:hint="Birthday"
                        android:textSize="20sp"
                        android:id="@+id/birthday_cast"
                        android:layout_marginRight="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:id="@+id/gender_layout"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_txt"
                        android:layout_marginHorizontal="10dp"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:hint="Gender"
                        android:textSize="20sp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/gender_cast"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:id="@+id/pob_layout"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pob_txt"
                        android:layout_marginHorizontal="10dp"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:hint="Place of Birth"
                        android:textSize="20sp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/pob_cast"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:id="@+id/bio_layout"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/biography_txt"
                        android:layout_marginHorizontal="10dp"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Biography"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/bio_cast"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/movie_rv_layout"
                    >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_done_txt"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="5dp"
                    android:id="@+id/movies_rv_cast"
                    />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:civ_border_color="#ffffff"
            app:civ_border_width="2dp"
            android:src="@drawable/ic_baseline_person_24"
            android:id="@+id/profile_pic_cast"
            android:layout_gravity="top|center_horizontal"
            />

    </FrameLayout>


</LinearLayout>