<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movieInfo.MovieDesc"
    android:orientation="vertical"
    style="@style/AppThemeNoActionBar"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/desc_movie_back_img"
        android:src="@drawable/ic_baseline_movie_24"/>
    <ImageView
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="180dp"
        android:id="@+id/desc_movie_poster"
        android:src="@drawable/ic_baseline_movie_24"
        />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="10dp"
            >
            <TextView
                android:id="@+id/desc_movie_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/dummy_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
            <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_twotone_star_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/desc_movie_ratings"
                android:layout_marginLeft="5dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/dummy_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp" />

        </LinearLayout>
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/desc_movie_overview"
                android:padding="10dp"
                android:textSize="15sp"
                android:text="Overview of the movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:textSize="20sp"
                android:text="Cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_cast_list"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/desc_cast_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:visibility="gone"
                />

            <TextView
                android:textSize="20sp"
                android:text="Trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_trailers"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/desc_trailers_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:visibility="gone"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>